--- a/provision-virtual-machine.yml
+++ b/provision-virtual-machine.yml
@@ -2,5 +2,16 @@
   hosts: localhost
   gather_facts: false
   tasks:
-    - name: "{{ academy_user }} - provision virtual machine to Amazon Web Services"
-      shell: 'echo "Hello world"'
+    - name: "{{ academy_user }} - provision virtual machine"
+      amazon.aws.cloudformation:
+        stack_name: "{{ academy_user }}-stack"
+        state: present
+        region: '{{ aws_region }}"
+        disable_rollback: true
+        template: "files/uservm-stack.yml"
+        template_parameters:
+          SubnetId: "{{ aws.subnet }}"
+          SecurityGroupId: "{{ aws.securitygroup }}"
+        tags:
+          User: "{{ academy_user }}"
+          Name: "{{ academy_user }}-vm"
