--- a/deploy/vars/vars.yml
+++ b/deploy/vars/vars.yml
@@ -1,3 +1,4 @@
 number_of_attendees: 10
 github_repo_url: https://github.com/adamgoossens/ansible-academy.git
 aws_region: ap-southeast-2
+academy_execution_environment_image: quay.io/agoossen/academy-ee:latest
