--- a/provision-virtual-machine.yml
+++ b/provision-virtual-machine.yml
@@ -10,6 +10,7 @@
         vpc_subnet_id: "{{ aws.subnet }}"
         instance_type: "t2.micro"
         region: "{{ aws.region }}"
+        image_id: "{{ aws.ami }}"
         network:
           assign_public_ip: true
           groups:
