--- a/configure-web-server.yml
+++ b/configure-web-server.yml
@@ -27,3 +27,29 @@
         permanent: yes
         immediate: yes
         state: enabled
+
+    - name: "{{ academy_user }} - configure splash page"
+      copy:
+        content: |
+          <html>
+          <head>
+          <title>Welcome, {{ academy_user }}!</title>
+          </head>
+          <body>
+          <h3>Welcome, {{ academy_user }}!</h3>
+          <p>You have successfully provisioned a new virtual machine, configured a web server and established
+          security controls.</p>
+          <p>You were able to make all of this available through a simple, step-by-step workflow using Ansible Automation Platform</p>
+          </body>
+          </html>
+        dest: /var/www/html/index.html
+        owner: apache
+        group: apache
+        mode: '0644'
+      notify: restart_httpd
+
+  handlers:
+    - name: restart_httpd
+      service:
+        name: httpd
+        state: restarted
