--- a/configure-web-server.yml
+++ b/configure-web-server.yml
@@ -29,7 +29,7 @@
         state: enabled
 
     - name: "{{ academy_user }} - configure splash page"
-      copy:
+      template:
         content: |
           <html>
           <head>
@@ -40,6 +40,10 @@
           <p>You have successfully provisioned a new virtual machine, configured a web server and established
           security controls.</p>
           <p>You were able to make all of this available through a simple, step-by-step workflow using Ansible Automation Platform</p>
+          <hr/>
+          {% if custom_message|default(False) %}
+          <p>Your custom message is: {{ custom_message }}</p>
+          {% endif %}
           </body>
           </html>
         dest: /var/www/html/index.html
