--- a/configure-web-server.yml
+++ b/configure-web-server.yml
@@ -30,22 +30,7 @@
 
     - name: "{{ academy_user }} - configure splash page"
       template:
-        content: |
-          <html>
-          <head>
-          <title>Welcome, {{ academy_user }}!</title>
-          </head>
-          <body>
-          <h3>Welcome, {{ academy_user }}!</h3>
-          <p>You have successfully provisioned a new virtual machine, configured a web server and established
-          security controls.</p>
-          <p>You were able to make all of this available through a simple, step-by-step workflow using Ansible Automation Platform</p>
-          <hr/>
-          {% if custom_message|default(False) %}
-          <p>Your custom message is: {{ custom_message }}</p>
-          {% endif %}
-          </body>
-          </html>
+        src: index.html.j2
         dest: /var/www/html/index.html
         owner: apache
         group: apache
