--- a/provision-virtual-machine.yml
+++ b/provision-virtual-machine.yml
@@ -8,7 +8,7 @@
         tags:
           User: "{{ academy_user }}"
         vpc_subnet_id: "{{ aws.subnet }}"
-        instance_type: "t2.micro"
+        instance_type: "t2.medium"
         region: "{{ aws.region }}"
         image_id: "{{ aws.ami }}"
         wait: true
@@ -16,3 +16,4 @@
         network:
           assign_public_ip: true
         security_group: "{{ aws.securitygroup }}"
+        state: running
