--- a/provision-virtual-machine.yml
+++ b/provision-virtual-machine.yml
@@ -12,7 +12,7 @@
         region: "{{ aws.region }}"
         image_id: "{{ aws.ami }}"
         wait: true
-        key_name: 'AcademyKey'
+        key_name: 'workshop-key-user'
         network:
           assign_public_ip: true
         security_group: "{{ aws.securitygroup }}"
