--- a/configure-load-balancer.yml
+++ b/configure-load-balancer.yml
@@ -27,7 +27,7 @@
         subnets:
           - "{{ aws.subnet }}"
         listeners:
-          - Protocol: TCP
+          - Protocol: HTTP
             Port: 80
             DefaultActions:
               - Type: forward
