--- a/configure-load-balancer.yml
+++ b/configure-load-balancer.yml
@@ -4,7 +4,7 @@
     - name: Create target group
       community.aws.elb_target_group:
         name: "{{academy_user}}-webserver-group"
-        protocol: http
+        protocol: tcp
         port: 80
         vpc_id: "{{ aws.vpc }}"
         region: "{{ aws.region }}"
@@ -21,15 +21,13 @@
       loop: "{{ groups['webservers'] }}"
 
     - name: Establish AWS load balancer
-      community.aws.elb_application_lb:
+      community.aws.elb_network_lb:
         name: "{{ academy_user }}-webserver-lb"
         region: "{{ aws.region }}"
-        security_groups:
-          - "{{ aws.securitygroup }}"
         subnets:
           - "{{ aws.subnet }}"
         listeners:
-          - Protocol: HTTP
+          - Protocol: TCP
             Port: 80
             DefaultActions:
               - Type: forward
