--- a/configure-load-balancer.yml
+++ b/configure-load-balancer.yml
@@ -36,3 +36,14 @@
           Name: "{{ academy_user }}-webserver-lb"
 
         state: present
+      register: elb
+
+    - name: Create Route53 record for load balancer
+      community.aws.route53:
+        alias: yes
+        alias_hosted_zone_id: "{{ aws.hosted_zone_id }}"
+        record: "{{ academy_user }}.{{ aws.hosted_zone }}"
+        value: "{{ elb.dns_name }}"
+        type: "A"
+        zone: "{{ aws.hosted_zone }}."
+        state: present
