--- a/configure-load-balancer.yml
+++ b/configure-load-balancer.yml
@@ -41,7 +41,7 @@
     - name: Create Route53 record for load balancer
       community.aws.route53:
         alias: yes
-        alias_hosted_zone_id: "{{ aws.hosted_zone_id }}"
+        alias_hosted_zone_id: "{{ elb.canonical_hosted_zone_id }}"
         record: "{{ academy_user }}.{{ aws.hosted_zone }}"
         value: "{{ elb.dns_name }}"
         type: "A"
