--- a/configure-load-balancer.yml
+++ b/configure-load-balancer.yml
@@ -49,4 +49,5 @@
         value: "{{ elb.dns_name }}"
         type: "A"
         zone: "{{ aws.hosted_zone }}."
+        overwrite: yes
         state: present
