--- a/teardown.yml
+++ b/teardown.yml
@@ -10,12 +10,25 @@
         filters:
           'tag:User': '{{ academy_user }}'
 
-    - name: "{{ academy_user }} - destroy Route53 record"
+    - name: "{{ academy_user }} - fetch Route53 record"
       community.aws.route53:
+        state: get
         record: "{{ academy_user }}.{{ aws.hosted_zone }}"
         zone: "{{ aws.hosted_zone }}"
-        state: absent
         type: 'A'
+      register: rec
+
+    - debug: var=rec
+
+    - name: "{{ academy_user }} - destroy Route53 record"
+      community.aws.route53:
+        record: "{{ rec.set.record }}"
+        zone: "{{ aws.hosted_zone }}"
+        state: absent
+        type: '{{ rec.set.type }}'
+        ttl: '{{ rec.set.ttl }}'
+        alias: True
+        alias_hosted_zone_id: "{{ rec.set.alias_hosted_zone_id }}"
 
     - name: "{{ academy_user }} - destroy elb"
       community.aws.elb_application_lb:
